syntax = "proto3";

option java_multiple_files = true;
option java_package = "uk.me.cormack.lighting7.grpc";
option java_outer_classname = "TrackProto";
option objc_class_prefix = "TRK";

package track;

import "google/protobuf/empty.proto";

service TrackNotify {
    rpc NotifyCurrentTrack (TrackDetails) returns (google.protobuf.Empty) {}
    rpc PlayerStateNotifier (google.protobuf.Empty) returns (stream TrackState) {}
}

enum PlayerState {
    HANDSHAKE = 0;
    PING = 1;
    PLAYING = 2;
    PAUSED = 3;
}

message TrackState {
    PlayerState playerState = 1;
}

message TrackDetails {
    PlayerState playerState = 1;
    string title = 2;
    string artist = 3;
}

